[gd_scene load_steps=10 format=2]

[ext_resource path="res://themes/theme.tres" type="Theme" id=3]
[ext_resource path="res://textures/effects/backgrounds/levels_bg.png" type="Texture" id=7]
[ext_resource path="res://prefabs/menu/education.tscn" type="PackedScene" id=27]
[ext_resource path="res://prefabs/menu/level_dialog.tscn" type="PackedScene" id=30]
[ext_resource path="res://textures/gui/exit.png" type="Texture" id=35]
[ext_resource path="res://scripts/menu/minigame.gd" type="Script" id=41]
[ext_resource path="res://textures/gui/shop_icon.png" type="Texture" id=48]
[ext_resource path="res://scripts/menu/levels.gd" type="Script" id=56]

[sub_resource type="CanvasItemMaterial" id=279]
blend_mode = 4

[node name="levels" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 56 )
__meta__ = {
"_edit_group_": true
}

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.360784, 0.611765, 1, 1 )

[node name="levels" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = false
follow_focus = true
scroll_vertical_enabled = false

[node name="levels" type="Control" parent="levels"]
margin_right = 4800.0
margin_bottom = 532.0
rect_min_size = Vector2( 4800, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="bg" type="TextureRect" parent="levels/levels"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="buttons" type="Control" parent="levels/levels"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="1_1" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2385.0
margin_top = 158.0
margin_right = -2345.0
margin_bottom = 198.0

[node name="1_2" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2339.0
margin_top = 148.0
margin_right = -2299.0
margin_bottom = 188.0

[node name="1_3" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2289.0
margin_top = 140.0
margin_right = -2249.0
margin_bottom = 180.0

[node name="1_4" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2238.0
margin_top = 135.0
margin_right = -2198.0
margin_bottom = 175.0

[node name="1_5" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2190.0
margin_top = 145.0
margin_right = -2150.0
margin_bottom = 185.0

[node name="1_6" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2141.0
margin_top = 146.0
margin_right = -2101.0
margin_bottom = 186.0

[node name="1_7" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2089.0
margin_top = 149.0
margin_right = -2049.0
margin_bottom = 189.0

[node name="1_8" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2042.0
margin_top = 154.0
margin_right = -2002.0
margin_bottom = 194.0

[node name="1_9" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1996.0
margin_top = 158.0
margin_right = -1956.0
margin_bottom = 198.0

[node name="1_10" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1949.0
margin_top = 151.0
margin_right = -1909.0
margin_bottom = 191.0

[node name="2_1" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1903.0
margin_top = 159.0
margin_right = -1863.0
margin_bottom = 199.0

[node name="2_2" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1859.0
margin_top = 144.0
margin_right = -1819.0
margin_bottom = 184.0

[node name="2_3" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1812.0
margin_top = 149.0
margin_right = -1772.0
margin_bottom = 189.0

[node name="2_4" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1766.0
margin_top = 141.0
margin_right = -1726.0
margin_bottom = 181.0

[node name="2_5" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1720.0
margin_top = 149.0
margin_right = -1680.0
margin_bottom = 189.0

[node name="2_6" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1673.0
margin_top = 149.0
margin_right = -1633.0
margin_bottom = 189.0

[node name="2_7" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1624.0
margin_top = 160.0
margin_right = -1584.0
margin_bottom = 200.0

[node name="2_8" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1577.0
margin_top = 155.0
margin_right = -1537.0
margin_bottom = 195.0

[node name="2_9" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1531.0
margin_top = 145.0
margin_right = -1491.0
margin_bottom = 185.0

[node name="2_10" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1485.0
margin_top = 152.0
margin_right = -1445.0
margin_bottom = 192.0

[node name="3_1" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1438.0
margin_top = 129.0
margin_right = -1398.0
margin_bottom = 169.0

[node name="3_2" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1403.0
margin_top = 84.0
margin_right = -1363.0
margin_bottom = 124.0

[node name="3_3" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1356.0
margin_top = 36.0
margin_right = -1316.0
margin_bottom = 76.0

[node name="3_4" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1307.0
margin_top = 30.0
margin_right = -1267.0
margin_bottom = 70.0

[node name="3_5" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1257.0
margin_top = 23.0
margin_right = -1217.0
margin_bottom = 63.0

[node name="3_6" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1210.0
margin_top = 27.0
margin_right = -1170.0
margin_bottom = 67.0

[node name="3_7" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1158.0
margin_top = 32.0
margin_right = -1118.0
margin_bottom = 72.0

[node name="3_8" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1112.0
margin_top = 38.0
margin_right = -1072.0
margin_bottom = 78.0

[node name="3_9" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1059.0
margin_top = 30.0
margin_right = -1019.0
margin_bottom = 70.0

[node name="3_10" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1007.0
margin_top = 24.0
margin_right = -967.0
margin_bottom = 64.0

[node name="4_1" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -956.0
margin_top = 28.0
margin_right = -916.0
margin_bottom = 68.0

[node name="4_2" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -910.0
margin_top = 24.0
margin_right = -870.0
margin_bottom = 64.0

[node name="4_3" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -862.0
margin_top = 31.0
margin_right = -822.0
margin_bottom = 71.0

[node name="4_4" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -816.0
margin_top = 36.0
margin_right = -776.0
margin_bottom = 76.0

[node name="4_5" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -768.0
margin_top = 26.0
margin_right = -728.0
margin_bottom = 66.0

[node name="4_6" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -718.0
margin_top = 34.0
margin_right = -678.0
margin_bottom = 74.0

[node name="4_7" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -668.0
margin_top = 28.0
margin_right = -628.0
margin_bottom = 68.0

[node name="4_8" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -618.0
margin_top = 36.0
margin_right = -578.0
margin_bottom = 76.0

[node name="4_9" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -570.0
margin_top = 27.0
margin_right = -530.0
margin_bottom = 67.0

[node name="4_10" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -526.0
margin_top = 30.0
margin_right = -486.0
margin_bottom = 70.0

[node name="5_1" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -469.0
margin_top = 30.0
margin_right = -429.0
margin_bottom = 70.0

[node name="5_2" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -421.0
margin_top = 40.0
margin_right = -381.0
margin_bottom = 80.0

[node name="5_3" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -371.0
margin_top = 35.0
margin_right = -331.0
margin_bottom = 75.0

[node name="5_4" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = 43.0
margin_right = -280.0
margin_bottom = 83.0

[node name="5_5" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -276.0
margin_top = 38.0
margin_right = -236.0
margin_bottom = 78.0

[node name="5_6" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.0
margin_top = 34.0
margin_right = -189.0
margin_bottom = 74.0

[node name="5_7" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.0
margin_top = 44.0
margin_right = -141.0
margin_bottom = 84.0

[node name="5_8" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = 39.0
margin_right = -93.0
margin_bottom = 79.0

[node name="5_9" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = 43.0
margin_right = -45.0
margin_bottom = 83.0

[node name="5_10" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 38.0
margin_bottom = 78.0

[node name="6_1" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = 36.0
margin_right = 46.0
margin_bottom = 76.0

[node name="6_2" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 52.0
margin_top = 39.0
margin_right = 92.0
margin_bottom = 79.0

[node name="6_3" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 97.0
margin_top = 46.0
margin_right = 137.0
margin_bottom = 86.0

[node name="6_4" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 143.0
margin_top = 38.0
margin_right = 183.0
margin_bottom = 78.0

[node name="6_5" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 190.0
margin_top = 43.0
margin_right = 230.0
margin_bottom = 83.0

[node name="6_6" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 237.0
margin_top = 38.0
margin_right = 277.0
margin_bottom = 78.0

[node name="6_7" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 284.0
margin_top = 47.0
margin_right = 324.0
margin_bottom = 87.0

[node name="6_8" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 334.0
margin_top = 39.0
margin_right = 374.0
margin_bottom = 79.0

[node name="6_9" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 383.0
margin_top = 46.0
margin_right = 423.0
margin_bottom = 86.0

[node name="6_10" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 436.0
margin_top = 33.0
margin_right = 476.0
margin_bottom = 73.0

[node name="7_1" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 482.0
margin_top = 7.0
margin_right = 522.0
margin_bottom = 47.0

[node name="7_2" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 533.0
margin_top = 5.0
margin_right = 573.0
margin_bottom = 45.0

[node name="7_3" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 578.0
margin_top = 4.0
margin_right = 618.0
margin_bottom = 44.0

[node name="7_4" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 625.0
margin_top = 4.0
margin_right = 665.0
margin_bottom = 44.0

[node name="7_5" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 670.0
margin_top = 4.0
margin_right = 710.0
margin_bottom = 44.0

[node name="7_6" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 714.0
margin_top = -6.0
margin_right = 754.0
margin_bottom = 34.0

[node name="7_7" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 762.0
margin_top = 8.0
margin_right = 802.0
margin_bottom = 48.0

[node name="7_8" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 811.0
margin_top = 8.0
margin_right = 851.0
margin_bottom = 48.0

[node name="7_9" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 858.0
margin_right = 898.0
margin_bottom = 40.0

[node name="7_10" type="Button" parent="levels/levels/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 912.0
margin_top = 15.0
margin_right = 952.0
margin_bottom = 55.0

[node name="shop_button" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -64.0
margin_right = 144.0
margin_bottom = -16.0
text = "shop.name"
icon = ExtResource( 48 )
clip_text = true
expand_icon = true

[node name="classes_button" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_top = -64.0
margin_right = 288.0
margin_bottom = -16.0
text = "classes.name"
clip_text = true
expand_icon = true

[node name="exit" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -64.0
margin_right = -16.0
margin_bottom = -16.0
text = "menu.exit"
icon = ExtResource( 35 )
clip_text = true
expand_icon = true

[node name="help_button" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 56.0
margin_bottom = 56.0
text = "?"

[node name="minigames_button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -136.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "minigame.s"

[node name="multiplayer_button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -272.0
margin_top = 16.0
margin_right = -152.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "lobby.title"

[node name="select_level" parent="." instance=ExtResource( 30 )]

[node name="education0" parent="." instance=ExtResource( 27 )]
visible = false
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 148.0
margin_top = -126.0
margin_right = 308.0
margin_bottom = 34.0

[node name="blocker" type="Control" parent="education0"]
anchor_right = 1.0
margin_bottom = 56.0

[node name="education2" parent="." instance=ExtResource( 27 )]
visible = false
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -124.0
margin_right = 156.0
margin_bottom = 36.0

[node name="blocker" type="Control" parent="education2"]
anchor_right = 1.0
margin_bottom = 56.0

[node name="education4" parent="." instance=ExtResource( 27 )]
visible = false

[node name="end" type="Button" parent="education4/main" index="0"]
material = SubResource( 279 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -15.0
margin_bottom = 15.0
text = "menu.edu.end"

[node name="text" parent="education4" index="5"]
text = "menu.edu.2"

[node name="select_minigame" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -160.0
margin_right = 320.0
margin_bottom = 160.0
window_title = "minigame.select"

[node name="minigame1" type="Button" parent="select_minigame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -120.0
margin_right = -40.0
margin_bottom = -72.0
text = "1.name"
expand_icon = true
script = ExtResource( 41 )
minigame_name = "1.name"

[node name="minigame2" type="Button" parent="select_minigame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -56.0
margin_right = -40.0
margin_bottom = -8.0
text = "2.name"
expand_icon = true
script = ExtResource( 41 )
minigame_name = "2.name"
id = 2
cost = 300
free = false

[node name="minigame3" type="Button" parent="select_minigame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = 8.0
margin_right = -40.0
margin_bottom = 56.0
text = "3.name"
expand_icon = true
script = ExtResource( 41 )
minigame_name = "3.name"
id = 3
cost = 2000
free = false

[node name="minigame4" type="Button" parent="select_minigame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = 72.0
margin_right = -40.0
margin_bottom = 120.0
text = "4.name"
expand_icon = true
script = ExtResource( 41 )
minigame_name = "4.name"
id = 4
cost = 750
free = false

[node name="minigame5" type="Button" parent="select_minigame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -120.0
margin_right = 280.0
margin_bottom = -72.0
text = "Platformer Dash"
expand_icon = true
script = ExtResource( 41 )
minigame_name = "Platformer Dash"
id = 5
cost = 0

[node name="minigame6" type="Button" parent="select_minigame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -56.0
margin_right = 280.0
margin_bottom = -8.0
text = "6.name"
expand_icon = true
script = ExtResource( 41 )
minigame_name = "6.name"
id = 6
cost = 1500
free = false

[node name="minigame7" type="Button" parent="select_minigame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 8.0
margin_right = 280.0
margin_bottom = 56.0
text = "7.name"
expand_icon = true
script = ExtResource( 41 )
minigame_name = "7.name"
id = 7

[node name="minigame8" type="Button" parent="select_minigame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 72.0
margin_right = 280.0
margin_bottom = 120.0
text = "FNaS"
expand_icon = true
script = ExtResource( 41 )
minigame_name = "FNaS"
id = 8
cost = 2500
free = false

[node name="buy" type="ConfirmationDialog" parent="select_minigame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -120.0
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 170, 59.5 )
window_title = "shop.confirm"
dialog_autowrap = true

[node name="no_resources" type="AcceptDialog" parent="select_minigame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -269.5
margin_top = -39.0
margin_right = 269.5
margin_bottom = 39.0
window_title = "minigame.no"
dialog_text = "minigame.no.text"

[node name="help_dialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -359.5
margin_top = -39.0
margin_right = 359.5
margin_bottom = 39.0
rect_min_size = Vector2( 170, 59.5 )
window_title = "menu.edu"
dialog_text = "menu.edu.again"

[node name="multiplayer" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -140.0
margin_right = 280.0
margin_bottom = 140.0
window_title = "lobby.title"

[node name="title" type="Label" parent="multiplayer"]
anchor_right = 1.0
margin_top = 12.0
margin_bottom = 36.0
text = "multiplayer.select_level"
align = 1

[node name="location" type="SpinBox" parent="multiplayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -187.0
margin_top = 48.0
margin_right = -7.0
margin_bottom = 88.0
min_value = 1.0
max_value = 10.0
value = 1.0
align = 1
prefix = "multiplayer.loc"

[node name="level" type="SpinBox" parent="multiplayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 5.0
margin_top = 48.0
margin_right = 185.0
margin_bottom = 88.0
min_value = 1.0
max_value = 10.0
value = 1.0
align = 1
prefix = "multiplayer.lvl"

[node name="create" type="Button" parent="multiplayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -80.0
margin_right = 100.0
margin_bottom = -48.0
text = "level_dialog.multiplayer.create"
clip_text = true

[node name="join" type="Button" parent="multiplayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -40.0
margin_right = 100.0
margin_bottom = -8.0
text = "level_dialog.multiplayer.join"
clip_text = true

[node name="guide" type="LinkButton" parent="multiplayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -114.0
margin_top = -120.0
margin_right = 114.0
margin_bottom = -96.0
grow_horizontal = 2
text = "multiplayer.guide"

[node name="select_level" type="OptionButton" parent="multiplayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 104.0
margin_right = 100.0
margin_bottom = 144.0
align = 1

[node name="guide_dialog" type="AcceptDialog" parent="multiplayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -228.0
margin_right = 360.0
margin_bottom = 228.0
window_title = "multiplayer.guide"
dialog_text = "menu.multiplayer.guide"
dialog_autowrap = true

[node name="multiplayer_warn" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -80.0
margin_right = 240.0
margin_bottom = 80.0
window_title = "lobby.title"
dialog_text = "menu.multiplayer.warn"
dialog_autowrap = true

[connection signal="pressed" from="shop_button" to="." method="shop"]
[connection signal="pressed" from="classes_button" to="." method="classes"]
[connection signal="pressed" from="exit" to="." method="exit"]
[connection signal="pressed" from="help_button" to="help_dialog" method="popup_centered"]
[connection signal="pressed" from="minigames_button" to="select_minigame" method="popup_centered"]
[connection signal="pressed" from="multiplayer_button" to="multiplayer" method="popup_centered"]
[connection signal="pressed" from="education4/main/end" to="education4" method="end"]
[connection signal="confirmed" from="help_dialog" to="." method="help"]
[connection signal="value_changed" from="multiplayer/location" to="." method="_on_level_location_value_changed"]
[connection signal="changed" from="multiplayer/level" to="." method="_on_location_level_changed"]
[connection signal="value_changed" from="multiplayer/level" to="." method="_on_level_location_value_changed"]
[connection signal="pressed" from="multiplayer/create" to="." method="create_room"]
[connection signal="pressed" from="multiplayer/join" to="." method="join_room"]
[connection signal="pressed" from="multiplayer/guide" to="multiplayer/guide_dialog" method="popup_centered"]
[connection signal="item_selected" from="multiplayer/select_level" to="." method="_on_select_level_item_selected"]

[editable path="education0"]
[editable path="education2"]
[editable path="education4"]
